Continue develop, added some states